SQOOP-2518: Sqoop2: Findbugs: Fix warning in repository-derby module
(Colin Ma via Jarek Jarcec Cecho)